--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-astroid==1.6.5 
+astroid==1.6.5
 backports.functools-lru-cache==1.5
 Click==7.0
 configparser==3.5.0
@@ -15,5 +15,5 @@ singledispatch==3.4.0.3
 six==1.12.0
 Werkzeug==0.14.1
 wrapt==1.10.11
-pytest==3.3.2
-pytest-cov==2.6.0
+pytest-cov==2.6.1
+gunicorn==19.9.0
